re_app/manifests/python-flask-hello-world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: python-flask-hello-world
    app.kubernetes.io/part-of: checkingtab
  name: python-flask-hello-world
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: python-flask-hello-world
    app.kubernetes.io/part-of: checkingtab
    matchLabels:
      app.kubernetes.io/name: python-flask-hello-world
  template:
    metadata:
      labels:
        app.kubernetes.io/name: python-flask-hello-world
        app.kubernetes.io/part-of: checkingtab
      name: python-flask-hello-world
    spec:
      containers:
      - image: quay.io/checkingtab/python-flask-hello-world:latest
        imagePullPolicy: Always
        name: python-flask-hello-world
        ports:
        - containerPort: 8080
      restartPolicy: Always
