re_app/manifests/spring-boot-helloworld-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: spring-boot-helloworld
    app.kubernetes.io/part-of: checkingtab
  name: spring-boot-helloworld
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: spring-boot-helloworld
    app.kubernetes.io/part-of: checkingtab
    matchLabels:
      app.kubernetes.io/name: spring-boot-helloworld
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spring-boot-helloworld
        app.kubernetes.io/part-of: checkingtab
      name: spring-boot-helloworld
    spec:
      containers:
      - image: ghcr.io/dark-kuroe/checkingtab/spring-boot-helloworld:re-app-67d4b5
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 5
          tcpSocket:
            port: 8080
        name: spring-boot-helloworld
        ports:
        - containerPort: 8080
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 5
          tcpSocket:
            port: 8080
        resources:
          requests:
            memory: 512Mi
            cpu: 500m
          limits:
            memory: 1Gi
            cpu: 1000m
      imagePullSecrets:
      - name: pull-secret
      restartPolicy: Always
