re_app/manifests/spring-boot-helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: spring-boot-helloworld
    app.kubernetes.io/part-of: checkingtab
  name: spring-boot-helloworld
spec:
  ports:
  - name: port-8080
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: spring-boot-helloworld
    app.kubernetes.io/part-of: checkingtab
  type: ClusterIP
status: {}
